@@ -1,3 +1,8 @@
+2006-06-19  Mike Stump  <mrs@apple.com>
+
+	* tree.c (variably_modified_type_p): VM arguments don't make the
+	type a VM type.
+
 2006-06-19  Richard Guenther  <rguenther@suse.de>
 
 	* tree-ssa-pre.c (try_combine_conversion): Strip useless
